# limpet-trs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.claude/: settings.local.json
.docker-cargo/: .global-cache
.docker-cargo/registry/cache/index.crates.io-1949cf8c6b5b557f/: libbpf-cargo-0.24.8.crate  libbpf-rs-0.24.8.crate  rmcp-macros-0.1.5.crate  vsprintf-2.0.0.crate
.docker-cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/li/bb/: libbpf-cargo  libbpf-rs  libbpf-sys
.docker-cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/rm/cp/: rmcp  rmcp-macros
.docker-cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/to/ki/: tokio-test
.docker-cargo/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/vs/pr/: vsprintf
.docker-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libbpf-cargo-0.24.8/: .cargo_vcs_info.json  Cargo.toml
.docker-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libbpf-rs-0.24.8/: .cargo_vcs_info.json  Cargo.toml
.docker-cargo/registry/src/index.crates.io-1949cf8c6b5b557f/libbpf-sys-1.6.2+v1.6.2/: .cargo_vcs_info.json  Cargo.toml
.github/workflows/: ci.yml  release.yml
bpf/: timing.bpf.c
src/: engine.rs  lib.rs  main.rs
src/cli/: mod.rs  output.rs
src/mcp/: mod.rs
src/scanner/: afxdp_sender.rs  collector.rs  hybrid_sender.rs  mod.rs  raw_socket_sender.rs  stealth.rs  syn_sender.rs
src/timing/: embeddings.rs  mod.rs  stats.rs  userspace.rs  xdp.rs
