[package]
name = "limpet"
version = "0.1.0"
edition = "2021"
description = "High-precision network scanner with eBPF/XDP kernel-bypass timing — nmap with nanosecond RTT measurement and ML-ready feature extraction"
license = "MIT"
authors = ["NullRabbit"]
repository = "https://github.com/nullrabbit/limpet"
keywords = ["network", "security", "scanner", "ebpf", "xdp"]
categories = ["network-programming", "command-line-utilities"]

[[bin]]
name = "limpet"
path = "src/main.rs"

[lib]
name = "limpet"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
libbpf-rs = "0.24"
nix = { version = "0.30", features = ["net", "hostname"] }
lru = "0.12"
rand = "0.8"
libc = "0.2"
clap = { version = "4", features = ["derive"] }
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
schemars = "0.8"

[build-dependencies]
libbpf-cargo = "0.24"

[dev-dependencies]
tokio-test = "0.4"
